--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
     <header>
-      <div>
-        <img src="assets/img/logo.svg" width="250px" />
+      
+        <img src="assets/img/logo.svg" alt="Epicode logo" />
 
-        <h1>EPICODE - IL BLOG DEI DEVELOPERS</h1>
+        <h3>EPICODE - IL BLOG DEI DEVELOPERS</h3>
         <nav>
           <ul>
             <li>
@@ -42,7 +46,7 @@
             </li>
           </ul>
         </nav>
-      </div>
+      
     </header>
     <main>
       <div id="container">
@@ -59,7 +63,7 @@
         <p>Le varie aree saranno quindi suddivise in:</p>
         <ul>
           <li>
-            di intestazione dei tag <span class="cornice">&lt;header&gt;</span>
+            Contentuti di intestazione dei tag <span class="cornice">&lt;header&gt;</span>
           </li>
           <li>
             Contenuti centrali variabili del tag
